--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,10 +9,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      Source Code Pro
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Source Code Pro
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
