--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -628,11 +628,11 @@ enable_audio_bell no
 #: Color scheme {{{
 
 foreground #ffffdd
-# background #000000
+#background #ffffff
 
 #: The foreground and background colors
 
-background_opacity 1
+background_opacity 0.95
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -670,7 +670,7 @@ background_opacity 1
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
 
-# background_tint 0.0
+#background_tint 0.9
 
 #: How much to tint the background image by the background color. The
 #: tint is applied only under the text area, not margin/borders. Makes
@@ -679,7 +679,7 @@ background_opacity 1
 #: background_opacity is set and transparent windows are supported or
 #: background_image is set.
 
-# dim_opacity 0.75
+#dim_opacity 0.01
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
