--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -118,24 +118,24 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-# inactive-opacity = 0.8;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-# frame-opacity = 0.7;
+frame-opacity = 1.0;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = false;
+#inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
