--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -9,12 +9,17 @@
 
 [bar/main-hlwm]
 monitor = eDP
-width = 100%
-height = 20
+width = 98.8%
+height = 28
+padding = 2
+border-size = 2
+border-color = #4444ff
+offset-x = 0.6%
+offset-y = 0.6%
 radius = 0.0
 fixed-center = true
 bottom = false
-separator = 
+separator =
 
 background = ${colors.colorBackground}
 foreground = ${colors.colorForeground}
@@ -44,10 +49,9 @@ label-font = 0
 ###########################################################
 
 [colors]
-colorUnderlineNormal = #0000ff
-colorUnderlineAlt = #0000ff
-colorText = #ff0000
-colorBackground = #111133
+colorUnderlineNormal = #ffffff
+colorUnderlineAlt = #00ff00
+colorBackground = #222222
 colorForeground = #ffffff
 
 ###########################################################
@@ -58,9 +62,9 @@ interval = 30
 
 mount-0 = /
 
-format-mounted-underline = ${colors.colorUnderlineNormal}
-label-mounted = %mountpoint%: %{F#ff0000}%percentage_used%%%{F-} usd
-format-unmounted-underline = ${colors.colorUnderlineAlt}
+;format-mounted-underline = ${colors.colorUnderlineNormal}
+label-mounted = %mountpoint%: %percentage_used%% usd
+;format-unmounted-underline = ${colors.colorUnderlineAlt}
 label-unmounted = %mountpoint% umtd
 
 ###########################################################
@@ -69,7 +73,7 @@ label-unmounted = %mountpoint% umtd
 type = internal/cpu
 interval = 2
 format-underline = ${colors.colorUnderlineNormal}
-label = cpu: %{F#ff0000}%percentage%%%{F-} utl
+label = cpu: %percentage%% utl
 
 ###########################################################
 
@@ -77,7 +81,7 @@ label = cpu: %{F#ff0000}%percentage%%%{F-} utl
 type = internal/memory
 interval = 2
 format-underline = ${colors.colorUnderlineNormal}
-label = memory: %{F#ff0000}%percentage_used%%%{F-} usd
+label = memory: %percentage_used%% usd
 
 ###########################################################
 
@@ -132,7 +136,7 @@ format-packetloss-underline = ${colors.colorUnderlineAlt}
 ;   %linkspeed% [wired]
 
 ; Default: %ifname% %local_ip%
-label-connected = %ifname% %{F#00ff00}con%{F-}@%{F#ff0000}%essid%%{F-}
+label-connected = %ifname% %{F#00ff00}con%{F-}@%essid%
 
 label-disconnected = %ifname% %{F#ff0000}dsc%{F-}
 
@@ -152,7 +156,7 @@ time-alt = %H:%M:%S
 
 format-underline = ${colors.colorUnderlineNormal}
 
-label = %{F#ff0000}%date%%{F-} %time%
+label = %date% %time%
 
 ###########################################################
 
@@ -177,22 +181,22 @@ adapter = ADP1
 ;
 ; Default: 5
 poll-interval = 1
-format-discharging-underline = ${colors.colorUnderlineAlt}
-format-charging-underline = ${colors.colorUnderlineNormal}
+format-discharging-underline = ${colors.colorUnderlineNormal}
+format-charging-underline = ${colors.colorUnderlineAlt}
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
-label-charging = chr %{F#00ff00}%percentage%%%{F-} @ %consumption%W
+label-charging = chr %percentage%% @ %consumption%W
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-label-discharging = dsc %{F#ff0000}%percentage%%%{F-}
+label-discharging = dsc %percentage%%
 
 ###########################################################
 
@@ -275,6 +279,7 @@ label-maxlen = 30
 
 [settings]
 screenchange-reload = true
+pseudo-transparency = true
 
 ###########################################################
 
