--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -8,18 +8,18 @@
 ###########################################################
 
 [bar/main-hlwm]
-monitor = eDP
-width = 98.8%
-height = 28
+monitor = DisplayPort-2
+width = 99%
+height = 26
 padding = 2
 border-size = 2
-border-color = #ffffff
-offset-x = 0.6%
-offset-y = 0.6%
+border-color = ${colors.colorBorder}
+offset-x = 0.5%
+offset-y = 0.5%
 radius = 0.0
 fixed-center = true
 bottom = false
-separator =
+separator = 
 
 background = ${colors.colorBackground}
 foreground = ${colors.colorForeground}
@@ -31,16 +31,59 @@ module-margin-right = 2
 
 line-size = 2
 
-modules-left = ewmh xwindow
+modules-left = ewmh
 modules-center = date
-modules-right = cpu memory filesystem network battery powermenu
+modules-right = cpu memory filesystem filesystem2 eth powermenu
 
-font-0 = "Open Sans:style=Regular"
-font-1 = "FontAwesome:style=Regular"
-;font-2 = "icomoon:style=Regular"
-;font-3 = "octicons:style=Medium"
-font-4 = "Twemoji:style=Regular;size=11"
-font-5 = "Roboto:style=Medium"
+font-0 = OpenSans-Regular.ttf: Open Sans:style=Regular
+font-1 = awesome-terminal-fonts/pomicons-regular.ttf: Pomodoro:style=Regular
+font-2 = awesome-terminal-fonts/fontawesome-regular.ttf: FontAwesome:style=Regular
+font-3 = awesome-terminal-fonts/devicons-regular.ttf: icomoon:style=Regular
+font-4 = awesome-terminal-fonts/octicons-regular.ttf: octicons:style=Medium
+font-5 = awesome-terminal-fonts/programming-languages.ttf: Programming\-Languages:style=Regular
+
+label-font = 0
+
+###########################################################
+#######HDMI-BAR############################################
+###########################################################
+
+[bar/sec-hlwm]
+monitor = HDMI-A-0
+width = 98%
+height = 22
+padding = 2
+border-size = 2
+border-color = ${colors.colorBorder}
+offset-x = 1%
+offset-y = 0.4%
+radius = 0.0
+fixed-center = true
+bottom = false
+separator = 
+
+background = ${colors.colorBackground}
+foreground = ${colors.colorForeground}
+
+override-redirect = true
+
+module-margin-left = 2
+module-margin-right = 2
+
+line-size = 2
+
+modules-left = ewmh
+modules-center = date
+modules-right = powermenu
+
+font-0 = OpenSans-Regular.ttf: Open Sans:style=Regular
+font-1 = awesome-terminal-fonts/pomicons-regular.ttf: Pomodoro:style=Regular
+font-2 = awesome-terminal-fonts/fontawesome-regular.ttf: FontAwesome:style=Regular
+font-3 = awesome-terminal-fonts/devicons-regular.ttf: icomoon:style=Regular
+font-4 = awesome-terminal-fonts/octicons-regular.ttf: octicons:style=Medium
+font-5 = awesome-terminal-fonts/programming-languages.ttf: Programming\-Languages:style=Regular
+
+label-font = 0
 
 ###########################################################
 ###########################################################
@@ -51,6 +94,7 @@ colorUnderlineNormal = #ffffff
 colorUnderlineAlt = #00ff00
 colorBackground = #302550
 colorForeground = #ffffff
+colorBorder = #ffffff
 
 ###########################################################
 
@@ -62,10 +106,22 @@ mount-0 = /
 
 format-mounted-underline = ${colors.colorUnderlineNormal}
 label-mounted = %mountpoint%: %percentage_used%% usd
+format-unmounted-underline = #ff0000
+label-unmounted = %mountpoint% umtd
+
+###########################################################
+
+
+[module/filesystem2]
+type = internal/fs
+interval = 30
+
+mount-0 = /hdd1
+
+format-mounted-underline = ${colors.colorUnderlineNormal}
+label-mounted = %mountpoint%: %percentage_used%% usd
 format-unmounted-underline = ${colors.colorUnderlineAlt}
 label-unmounted = %mountpoint% umtd
-label-mounted-font = 6
-label-unmounted-font = 6
 
 ###########################################################
 
@@ -74,7 +130,6 @@ type = internal/cpu
 interval = 2
 format-underline = ${colors.colorUnderlineNormal}
 label = cpu: %percentage%% utl
-label-font = 6
 
 ###########################################################
 
@@ -83,72 +138,19 @@ type = internal/memory
 interval = 2
 format-underline = ${colors.colorUnderlineNormal}
 label = memory: %percentage_used%% usd
-label-font = 6
 
 ###########################################################
 
-[module/network]
+[module/eth]
 type = internal/network
-; Name of the network interface to display. You can get the names of the
-; interfaces on your machine with `ip link`
-; Wireless interfaces often start with `wl` and ethernet interface with `eno` or `eth`
-interface = wlo1
+interface = enp34s0
+interval = 5
 
-; Seconds to sleep between updates
-; Default: 1
-interval = 3.0
-
-; Accumulate values from all interfaces
-; when querying for up/downspeed rate
-; Default: false
-accumulate-stats = false
-
-; Consider an `UNKNOWN` interface state as up.
-; Some devices like USB network adapters have 
-; an unknown state, even when they're running
-; Default: false
-unknown-as-up = false
-
-; Available tags:
-;   <label-connected> (default)
-;   <ramp-signal>
-format-connected = <label-connected> <ramp-signal>
 format-connected-underline = ${colors.colorUnderlineNormal}
+label-connected = eth con
 
-; Available tags:
-;   <label-disconnected> (default)
-format-disconnected = <label-disconnected>
 format-disconnected-underline = ${colors.colorUnderlineAlt}
-
-; Available tags:
-;   <label-connected> (default)
-;   <label-packetloss>
-;   <animation-packetloss>
-format-packetloss = <label-packetloss>
-format-packetloss-underline = ${colors.colorUnderlineAlt}
-
-; All labels support the following tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %local_ip6% [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %linkspeed% [wired]
-
-; Default: %ifname% %local_ip%
-label-connected = %ifname% con @ %essid%
-;label-connected-font = 6
-label-disconnected = %ifname% dsc
-;label-disconnected-font = 6
-
-ramp-signal-0 = -
-ramp-signal-1 = /
-ramp-signal-2 = /-
-ramp-signal-3 = //
-ramp-signal-4 = //-
-ramp-signal-5 = ///
+label-disconnected = eth disc
 
 ###########################################################
 
@@ -165,49 +167,6 @@ time-alt = %H:%M:%S
 format-underline = ${colors.colorUnderlineNormal}
 
 label = %date% %time%
-label-font = 6
-
-###########################################################
-
-[module/battery]
-type = internal/battery
-
-; This is useful in case the battery never reports 100% charge
-full-at = 99
-
-; Use the following command to list batteries and adapters:
-; $ ls -1 /sys/class/power_supply/
-battery = BAT0
-adapter = ADP1
-
-; If an inotify event haven't been reported in this many
-; seconds, manually poll for new values.
-;
-; Needed as a fallback for systems that don't report events
-; on sysfs/procfs.
-;
-; Disable polling by setting the interval to 0.
-;
-; Default: 5
-poll-interval = 1
-format-discharging-underline = ${colors.colorUnderlineNormal}
-format-charging-underline = ${colors.colorUnderlineNormal}
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
-;   %time%
-;   %consumption% (shows current charge rate in watts)
-label-charging = chr %percentage%% @ %consumption%W
-label-charging-font = 6
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
-label-discharging = dsc %percentage%%
-label-discharging-font = 6
 
 ###########################################################
 
@@ -222,8 +181,6 @@ format-underline = ${colors.colorUnderlineNormal}
 label-open = pwr >
 label-close = pwr <
 label-separator = /
-label-open-font = 6
-label-close-font = 6
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
@@ -243,7 +200,7 @@ menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
 menu-3-0 = %{F#ff0000}sleep%{F-}
-menu-3-0-exec = systemctl suspend && betterlockscreen -l
+menu-3-0-exec = systemctl suspend && ~/.config/herbstluftwm/scripts/i3lock.sh
 menu-3-1 = cancel
 menu-3-1-exec = menu-open-0
 
@@ -264,25 +221,20 @@ icon-3 = 4;
 icon-4 = 5;
 format = <label-state>
 label-monitor = %name%
-label-monitor-font = 6
 
 label-active = %name%
 label-active-underline= ${colors.colorUnderlineNormal}
 label-active-padding = 2
-label-active-font = 6
 
 label-occupied = %name%o
 label-occupied-padding = 2
-label-occupied-font = 6
 
 label-urgent = %name%
 label-urgent-underline = ${colors.colorUnderlineAlt}
 label-urgent-padding = 2
-label-urgent-font = 6
 
 label-empty = %name%e
 label-empty-padding = 2
-label-empty-font = 6
 
 ###########################################################
 
@@ -290,9 +242,8 @@ label-empty-font = 6
 type = internal/xwindow
 
 label = %title%
-label-underline = ${colors.colorUnderlineNormal}
 label-maxlen = 30
-label-font = 6
+label-underline = ${colors.colorUnderlineNormal}
 
 ##########################################################
 
