change term color

--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -628,7 +628,7 @@ enable_audio_bell no
 #: Color scheme {{{
 
 foreground #ffffdd
-#background #ffffff
+background #100230
 
 #: The foreground and background colors
 
