--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -259,7 +259,7 @@ cursor_shape underline
 #: The modifier keys to press when clicking with the mouse on URLs to
 #: open the URL
 
-# open_url_with default
+open_url_with default
 
 #: The program with which to open URLs that are clicked on. The
 #: special value default means to use the operating system's default
@@ -276,7 +276,7 @@ detect_urls yes
 #: underline and the mouse cursor becomes a hand over them. Even if
 #: this option is disabled, URLs are still clickable.
 
-# copy_on_select no
+# copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
@@ -628,11 +628,11 @@ enable_audio_bell no
 #: Color scheme {{{
 
 foreground #ffffdd
-background #100230
+background #000011
 
 #: The foreground and background colors
 
-background_opacity 1
+# background_opacity 0.95
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -670,7 +670,7 @@ background_opacity 1
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
 
-#background_tint 0.9
+# background_tint 0.9
 
 #: How much to tint the background image by the background color. The
 #: tint is applied only under the text area, not margin/borders. Makes
@@ -679,11 +679,10 @@ background_opacity 1
 #: background_opacity is set and transparent windows are supported or
 #: background_image is set.
 
-#dim_opacity 0.01
+# dim_opacity 0
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
-
 # selection_foreground #000000
 
 #: The foreground for text selected with the mouse. A value of none
@@ -692,7 +691,6 @@ background_opacity 1
 # selection_background #fffacd
 
 #: The background for text selected with the mouse.
-
 
 #: The 16 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version. You can also set the remaining colors from
@@ -1012,7 +1010,7 @@ background_opacity 1
 
 #:     map ctrl+f>2 set_font_size 20
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
@@ -1034,7 +1032,7 @@ background_opacity 1
 
 #: Clipboard {{{
 
-# map kitty_mod+c copy_to_clipboard
+map kitty_mod+c copy_to_clipboard
 
 #: There is also a copy_or_interrupt action that can be optionally
 #: mapped to Ctrl+c. It will copy only if there is a selection and
@@ -1042,7 +1040,7 @@ background_opacity 1
 #: will copy and clear the selection or send an interrupt if there is
 #: no selection.
 
-# map kitty_mod+v  paste_from_clipboard
+map kitty_mod+v  paste_from_clipboard
 # map kitty_mod+s  paste_from_selection
 # map shift+insert paste_from_selection
 # map kitty_mod+o  pass_selection_to_program
