--- a/combined/kitty/kitty.conf
+++ b/combined/kitty/kitty.conf
@@ -696,43 +696,43 @@ background #000018
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-# color0 #000000
-# color8 #767676
+color0 #000000
+color8 #323232
 
 #: black
 
-# color1 #cc0403
-# color9 #f2201f
+color1 #ff3333
+color9 #ff3333
 
 #: red
 
-# color2  #19cb00
-# color10 #23fd00
+color2  #11ff44
+color10 #11ff44
 
 #: green
 
-# color3  #cecb00
-# color11 #fffd00
+color3  #e9ff00
+color11 #e9ff00
 
 #: yellow
 
-# color4  #0d73cc
-# color12 #1a8fff
+color4  #0066ff
+color12 #0066ff
 
 #: blue
 
-# color5  #cb1ed1
-# color13 #fd28ff
+color5  #cb1ed1
+color13 #cb1ed1
 
 #: magenta
 
-# color6  #0dcdcd
-# color14 #14ffff
+color6  #00ebff
+color14 #00ebff
 
 #: cyan
 
-# color7  #dddddd
-# color15 #ffffff
+color7  #d8d8d8
+color15 #d8d8d8
 
 #: white
 
