--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -28,7 +28,8 @@ override-redirect = true
 module-margin-left = 2
 module-margin-right = 2
 
-line-size = 1
+line-size = 0
+line-color = ${colors.colorUnderline}
 
 modules-left = ewmh cpu memory
 modules-center = date
@@ -46,8 +47,7 @@ font-5 = "FontAwesome:style=Regular"
 ###########################################################
 
 [colors]
-colorUnderlineNormal = #ffffff
-colorUnderlineAlt = #00ff00
+colorUnderline = #ffffff
 colorBackground = #000018
 colorForeground = #ffffff
 
@@ -59,9 +59,7 @@ interval = 30
 
 mount-0 = /
 
-#format-mounted-underline = ${colors.colorUnderlineNormal}
-label-mounted = %mountpoint%: %percentage_used%% usd
-#format-unmounted-underline = ${colors.colorUnderlineAlt}
+label-mounted = %used% of %mountpoint% usd
 label-unmounted = %mountpoint% umtd
 label-mounted-font = 0
 label-unmounted-font = 0
@@ -71,7 +69,6 @@ label-unmounted-font = 0
 [module/cpu]
 type = internal/cpu
 interval = 2
-#format-underline = ${colors.colorUnderlineNormal}
 label = cpu: %percentage%% utl
 label-font = 0
 
@@ -80,8 +77,7 @@ label-font = 0
 [module/memory]
 type = internal/memory
 interval = 2
-#format-underline = ${colors.colorUnderlineNormal}
-label = memory: %percentage_used%% usd
+label = mry: %percentage_used%% usd
 label-font = 0
 
 ###########################################################
@@ -112,19 +108,16 @@ unknown-as-up = false
 ;   <label-connected> (default)
 ;   <ramp-signal>
 format-connected = <label-connected> <ramp-signal>
-#format-connected-underline = ${colors.colorUnderlineNormal}
 
 ; Available tags:
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
-#format-disconnected-underline = ${colors.colorUnderlineNormal}
 
 ; Available tags:
 ;   <label-connected> (default)
 ;   <label-packetloss>
 ;   <animation-packetloss>
 format-packetloss = <label-packetloss>
-#format-packetloss-underline = ${colors.colorUnderlineAlt}
 
 ; All labels support the following tokens:
 ;   %ifname%    [wireless+wired]
@@ -156,11 +149,9 @@ type = internal/network
 interface = enp34s0
 interval = 5
 
-#format-connected-underline = ${colors.colorUnderlineNormal}
 label-connected = eth con
 label-connected-font = 0
 
-#format-disconnected-underline = ${colors.colorUnderlineAlt}
 label-disconnected = eth disc
 label-disconnect-font = 0
 
@@ -175,8 +166,6 @@ date-alt = "%d.%m.%Y"
 
 time = %H:%M
 time-alt = %H:%M:%S
-
-#format-underline = ${colors.colorUnderlineNormal}
 
 label = %date% %time%
 label-font = 0
@@ -204,8 +193,6 @@ adapter = ADP1
 ;
 ; Default: 5
 poll-interval = 1
-#format-discharging-underline = ${colors.colorUnderlineNormal}
-#format-charging-underline = ${colors.colorUnderlineNormal}
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
@@ -231,7 +218,6 @@ type = custom/menu
 expand-right = true
 
 format-spacing = 2
-#format-underline = ${colors.colorUnderlineNormal}
 
 label-open = pwr >
 label-close = pwr <
@@ -281,7 +267,6 @@ label-monitor = %name%
 label-monitor-font = 0
 
 label-active = |%name%|
-#label-active-underline= ${colors.colorUnderlineNormal}
 label-active-margin = 1
 label-active-padding = 0 
 label-active-font = 0
@@ -292,7 +277,6 @@ label-occupied-padding = 0
 label-occupied-font = 0
 
 label-urgent = %name%
-#label-urgent-underline = ${colors.colorUnderlineAlt}
 label-urgent-margin = 1
 label-urgent-padding = 0
 label-urgent-font = 0
@@ -308,7 +292,6 @@ label-empty-font = 0
 type = internal/xwindow
 
 label = %title%
-#label-underline = ${colors.colorUnderlineNormal}
 label-maxlen = 30
 label-font = 0
 
