--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -59,7 +59,7 @@ interval = 30
 
 mount-0 = /
 
-label-mounted = %used% of %mountpoint% usd
+label-mounted = %used% of %total% usd
 label-unmounted = %mountpoint% umtd
 label-mounted-font = 0
 label-unmounted-font = 0
@@ -77,7 +77,7 @@ label-font = 0
 [module/memory]
 type = internal/memory
 interval = 2
-label = mry: %percentage_used%% usd
+label = mry: %gb_used% usd
 label-font = 0
 
 ###########################################################
