--- a/pc/polybar/config
+++ b/pc/polybar/config
@@ -15,7 +15,7 @@ height = 26
 border-size = 2
 border-color = ${colors.colorBorder}
 offset-x = 0.5%
-offset-y = 0.5%
+#offset-y = 0
 radius = 0.0
 fixed-center = true
 padding = 2
@@ -48,12 +48,13 @@ font-5 = "FontAwesome:style=Regular"
 
 [bar/sec-hlwm]
 monitor = HDMI-A-0
+
 width = 98%
-height = 22
+height = 26
 border-size = 2
 border-color = ${colors.colorBorder}
 offset-x = 1%
-offset-y = 0.4%
+#offset-y = 0
 radius = 0.0
 fixed-center = true
 padding = 2
@@ -99,9 +100,9 @@ interval = 30
 mount-0 = /
 
 label-mounted = %mountpoint%: %free% free
-label-mounted-font = 0
+label-mounted-font = 1
 label-unmounted = %mountpoint% umtd
-label-unmounted-font = 0
+label-unmounted-font = 1
 
 ###########################################################
 
@@ -113,9 +114,9 @@ interval = 30
 mount-0 = /hdd1
 
 label-mounted = %mountpoint%: %free% free
-label-mounted-font = 0
+label-mounted-font = 1
 label-unmounted = %mountpoint% umtd
-label-unmounted-font = 0
+label-unmounted-font = 1
 
 ###########################################################
 
@@ -123,7 +124,7 @@ label-unmounted-font = 0
 type = internal/cpu
 interval = 2
 label = cpu: %percentage%% utl
-label-font = 0
+label-font = 1
 
 ###########################################################
 
@@ -131,7 +132,7 @@ label-font = 0
 type = internal/memory
 interval = 2
 label = memory: %gb_used% usd
-label-font = 0
+label-font = 1
 
 ###########################################################
 
@@ -141,10 +142,10 @@ interface = enp34s0
 interval = 5
 
 label-connected = eth con
-label-connected-font = 0
+label-connected-font = 1
 
 label-disconnected = eth disc
-label-disconnect-font = 0
+label-disconnect-font = 1
 
 ###########################################################
 
@@ -159,7 +160,7 @@ time = %H:%M
 time-alt = %H:%M:%S
 
 label = %date% %time%
-label-font = 0
+label-font = 1
 
 ###########################################################
 
@@ -173,8 +174,8 @@ format-spacing = 2
 label-open = pwr >
 label-close = pwr <
 label-separator = /
-label-open-font = 0
-label-close-font = 0
+label-open-font = 1
+label-close-font = 1
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
@@ -219,22 +220,22 @@ label-monitor = %name%
 label-active = |%name%|
 label-active-margin = 1
 label-active-padding = 0
-label-active-font = 0
+label-active-font = 1
 
 label-occupied = %name%
 label-occupied-margin = 1
 label-occupied-padding = 0
-label-occupied-font = 0
+label-occupied-font = 1
 
 label-urgent = !%name%!
 label-urgent-margin = 1
 label-urgent-padding = 0
-label-urgent-font = 0
+label-urgent-font = 1
 
 label-empty = %name%
 label-empty-margin = 1
 label-empty-padding = 0
-label-empty-font = 0
+label-empty-font = 1
 
 ###########################################################
 
@@ -243,12 +244,12 @@ type = internal/xwindow
 
 label = %title%
 label-maxlen = 30
-label-font = 0
+label-font = 1
 
 ##########################################################
 
 [settings]
-screenchange-reload = true
+#screenchange-reload = true
 #pseudo-transparency = true
 
 ###########################################################
