--- a/laptop/polybar/config
+++ b/laptop/polybar/config
@@ -48,7 +48,7 @@ font-5 = "FontAwesome:style=Regular"
 
 [colors]
 colorUnderline = #ffffff
-colorBackground = #000018
+colorBackground = #011b78
 colorForeground = #ffffff
 
 ###########################################################
