--- a/combined/picom/picom.conf
+++ b/combined/picom/picom.conf
@@ -165,11 +165,11 @@ blur:
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+#blur-background-exclude = [
+#  "window_type = 'dock'",
+#  "window_type = 'desktop'",
+#  "_GTK_FRAME_EXTENTS@:c"
+#];
 
 #################################
 #       General Settings        #
