--- a/combined/picom/picom.conf
+++ b/combined/picom/picom.conf
@@ -158,7 +158,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 blur:
 {
 	#gaussian, box, kernel
-	method = "gaussian";
+	method = "kernel";
 	size = 10;
 	deviation = 5.0;
 };
